docs/tests/nameres/custom_types/invalid/StructNested.src
// Invalid

struct Nest {
    struct two {    

    }
}